Added the BLUE info at the top

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>CodePen - GFA_Day5_Star Wars 2</title>
@@ -12,6 +12,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="wholePage">
+  <nav id="horniLista" lang="cs">První Leniččina webová stránka</nav>
   <nav>
     <a href="#achievements" id="link2">Achievements</a>
     <a href="#experience" id="link3">Experience</a>
@@ -22,7 +23,7 @@
     <div class="imageContainer">
       <image src="GFA_StarWars2_image.png"></image>
       <div id="greeting">
-        <h2 id="greeting1stLine">Hi Michal, my name is</h2>
+        <h2 id="greeting1stLine">Hi, my name is</h2>
         <h1 id="greeting2ndLine"> Anakin</h1>
         <h1 id="greeting3rdLine"> Skywalker</h1>
       </div>
