Added an English heading
Added an English heading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="wholePage">
-  <nav id="horniLista" lang="cs">První Leniččina webová stránka</nav>
+  <nav id="horniLista" lang="cs">První Leniččina webová stránka/First Lenka's web page</nav>
   <nav>
     <a href="#achievements" id="link2">Achievements</a>
     <a href="#experience" id="link3">Experience</a>
